Funcionalidad de encriptación completa

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <p>Desarrollado por Luis Eduardo Dizu Mendez</p>
     </footer>
 
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
