Error al encontrar el js

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <p>Desarrollado por Luis Eduardo Dizu Mendez</p>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
