--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
 
-    <header class="header">
+    <header class="header" id="header">
         <img src="./assets/Logo.png" alt="Logo del encriptador">
     </header>
 
@@ -60,6 +61,14 @@
 
     <footer>
         <p>Desarrollado por Luis Eduardo Dizu Mendez</p>
+        <div class="social-media">
+            <a href="https://www.linkedin.com/in/eduardo-mendez-it/" target="_blank" aria-label="LinkedIn">
+                <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="https://www.instagram.com/im_eduardo.7/" target="_blank" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </div>
     </footer>
 
     <script src="./js/app.js"></script>
